--- a/core/data/cowork/podcast/abook.html
+++ b/core/data/cowork/podcast/abook.html
@@ -447,6 +447,26 @@
             color: #2ecc71;
         }
 
+        @keyframes pulse-gold {
+            0% {
+                box-shadow: 0 0 0 0 rgba(212, 175, 55, 0.4);
+            }
+
+            70% {
+                box-shadow: 0 0 0 10px rgba(212, 175, 55, 0);
+            }
+
+            100% {
+                box-shadow: 0 0 0 0 rgba(212, 175, 55, 0);
+            }
+        }
+
+        .pulse-gold {
+            animation: pulse-gold 1.5s infinite;
+            border-color: var(--accent-gold) !important;
+            background: rgba(212, 175, 55, 0.1) !important;
+        }
+
         .info-text {
             display: none;
             background: rgba(0, 0, 0, 0.3);
@@ -554,7 +574,7 @@
             <div class="episode-tag">Episode VI - Das Hörbuch (beta)</div>
 
             <div class="info-bar">
-                <button class="info-btn" onclick="toggleInfo()">TTS</button>
+                <button id="tts-btn" id="tts-btn" class="info-btn" onclick="toggleInfo()">TTS</button>
                 <button class="info-btn source-btn no-source" onclick="openSource('')">Quelle</button>
             </div>
 
@@ -854,11 +874,38 @@
             if (audio.paused) {
                 audio.play();
                 playBtn.innerHTML = pauseIcon;
+                triggerTTSHint();
             } else {
                 audio.pause();
                 playBtn.innerHTML = playIcon;
             }
         });
+
+        function triggerTTSHint() {
+            const hintKey = 'tts_hint_shown';
+            if (localStorage.getItem(hintKey)) return;
+
+            const ttsBtn = document.getElementById('tts-btn');
+            const infoText = document.getElementById('info-text');
+
+            if (!ttsBtn || !infoText) return;
+
+            setTimeout(() => {
+                ttsBtn.classList.add('pulse-gold');
+                setTimeout(() => {
+                    infoText.classList.add('visible');
+                    setTimeout(() => {
+                        infoText.classList.remove('visible');
+                        ttsBtn.classList.add('pulse-gold');
+                        setTimeout(() => {
+                            ttsBtn.classList.remove('pulse-gold');
+                        }, 3000);
+                    }, 4000);
+                }, 1000);
+            }, 500);
+
+            localStorage.setItem(hintKey, 'true');
+        }
     </script>
 </body>
 
