--- a/core/data/cowork/podcast/index.html
+++ b/core/data/cowork/podcast/index.html
@@ -451,6 +451,26 @@
             color: #2ecc71;
         }
 
+        @keyframes pulse-gold {
+            0% {
+                box-shadow: 0 0 0 0 rgba(212, 175, 55, 0.4);
+            }
+
+            70% {
+                box-shadow: 0 0 0 10px rgba(212, 175, 55, 0);
+            }
+
+            100% {
+                box-shadow: 0 0 0 0 rgba(212, 175, 55, 0);
+            }
+        }
+
+        .pulse-gold {
+            animation: pulse-gold 1.5s infinite;
+            border-color: var(--accent-gold) !important;
+            background: rgba(212, 175, 55, 0.1) !important;
+        }
+
         .info-text {
             display: none;
             background: rgba(0, 0, 0, 0.3);
@@ -640,7 +660,7 @@
                     <h2 class="episode-title">Das Hörbuch (beta)</h2>
 
                     <div class="info-bar">
-                        <button class="info-btn" onclick="toggleInfo(1)">TTS</button>
+                        <button id="tts-btn-1" class="info-btn" onclick="toggleInfo(1)">TTS</button>
                         <button class="info-btn source-btn has-source"
                             onclick="openSource('../documents/die_villa_kunterbunt_anthologie.pdf')">Quelle</button>
                     </div>
@@ -837,10 +857,37 @@
             if (audio.paused) {
                 audio.play();
                 btn.innerHTML = pauseIcon;
+                triggerTTSHint(id);
             } else {
                 audio.pause();
                 btn.innerHTML = playIcon;
             }
+        }
+
+        function triggerTTSHint(id) {
+            const hintKey = 'tts_hint_shown';
+            if (localStorage.getItem(hintKey)) return;
+
+            const ttsBtn = document.getElementById(`tts-btn-${id}`);
+            const infoText = document.getElementById(`info-text-${id}`);
+
+            if (!ttsBtn || !infoText) return;
+
+            setTimeout(() => {
+                ttsBtn.classList.add('pulse-gold');
+                setTimeout(() => {
+                    infoText.classList.add('visible');
+                    setTimeout(() => {
+                        infoText.classList.remove('visible');
+                        ttsBtn.classList.add('pulse-gold');
+                        setTimeout(() => {
+                            ttsBtn.classList.remove('pulse-gold');
+                        }, 3000);
+                    }, 4000);
+                }, 1000);
+            }, 500);
+
+            localStorage.setItem(hintKey, 'true');
         }
 
         // Autoplay Logic
