--- a/core/data/main/podcast/index.html
+++ b/core/data/main/podcast/index.html
@@ -162,7 +162,7 @@
             transform-style: preserve-3d;
         }
 
-                .cover-flip-container.flipped .flipper {
+        .cover-flip-container.flipped .flipper {
             transform: rotateY(180deg);
         }
 
@@ -467,6 +467,26 @@
             color: #2ecc71;
         }
 
+        @keyframes pulse-gold {
+            0% {
+                box-shadow: 0 0 0 0 rgba(212, 175, 55, 0.4);
+            }
+
+            70% {
+                box-shadow: 0 0 0 10px rgba(212, 175, 55, 0);
+            }
+
+            100% {
+                box-shadow: 0 0 0 0 rgba(212, 175, 55, 0);
+            }
+        }
+
+        .pulse-gold {
+            animation: pulse-gold 1.5s infinite;
+            border-color: var(--accent-gold) !important;
+            background: rgba(212, 175, 55, 0.1) !important;
+        }
+
         .info-text {
             display: none;
             background: rgba(0, 0, 0, 0.3);
@@ -657,7 +677,7 @@
                     <h2 class="episode-title">Die Satire</h2>
 
                     <div class="info-bar">
-                        <button class="info-btn" onclick="toggleInfo(1)">TTS</button>
+                        <button class="info-btn" id="tts-btn-1" onclick="toggleInfo(1)">TTS</button>
                         <button class="info-btn source-btn no-source" onclick="openSource('')">Quelle</button>
                     </div>
 
@@ -739,7 +759,7 @@
                     <h2 class="episode-title">Die Analyse</h2>
 
                     <div class="info-bar">
-                        <button class="info-btn" onclick="toggleInfo(2)">TTS</button>
+                        <button class="info-btn" id="tts-btn-2" onclick="toggleInfo(2)">TTS</button>
                         <button class="info-btn source-btn no-source" onclick="openSource('')">Quelle</button>
                     </div>
 
@@ -821,7 +841,7 @@
                     <h2 class="episode-title">Das Dossier</h2>
 
                     <div class="info-bar">
-                        <button class="info-btn" onclick="toggleInfo(3)">TTS</button>
+                        <button class="info-btn" id="tts-btn-3" onclick="toggleInfo(3)">TTS</button>
                         <button class="info-btn source-btn no-source" onclick="openSource('')">Quelle</button>
                     </div>
 
@@ -902,7 +922,7 @@
                     <h2 class="episode-title">Der DeepDive</h2>
 
                     <div class="info-bar">
-                        <button class="info-btn" onclick="toggleInfo(4)">TTS</button>
+                        <button class="info-btn" id="tts-btn-4" onclick="toggleInfo(4)">TTS</button>
                         <button class="info-btn source-btn no-source" onclick="openSource('')">Quelle</button>
                     </div>
 
@@ -979,7 +999,7 @@
                     <h2 class="episode-title">Der Zupftest</h2>
 
                     <div class="info-bar">
-                        <button class="info-btn" onclick="toggleInfo(5)">TTS</button>
+                        <button class="info-btn" id="tts-btn-5" onclick="toggleInfo(5)">TTS</button>
                         <button class="info-btn source-btn no-source" onclick="openSource('')">Quelle</button>
                     </div>
 
@@ -1056,7 +1076,7 @@
                     <h2 class="episode-title">Die Studie</h2>
 
                     <div class="info-bar">
-                        <button class="info-btn" onclick="toggleInfo(6)">TTS</button>
+                        <button class="info-btn" id="tts-btn-6" onclick="toggleInfo(6)">TTS</button>
                         <button class="info-btn source-btn no-source" onclick="openSource('')">Quelle</button>
                     </div>
 
@@ -1133,7 +1153,7 @@
                     <h2 class="episode-title">Das Korrespondenz Epos</h2>
 
                     <div class="info-bar">
-                        <button class="info-btn" onclick="toggleInfo(7)">TTS</button>
+                        <button class="info-btn" id="tts-btn-7" onclick="toggleInfo(7)">TTS</button>
                         <button class="info-btn source-btn no-source" onclick="openSource('')">Quelle</button>
                     </div>
 
@@ -1411,10 +1431,44 @@
             });
         }
 
-        // ... (rest of functions like formatTime, togglePlay, etc. are outside initPlayer) ...
+        function togglePlay(id) {
+            const audio = document.getElementById(`audio-player-${id}`);
+            const btn = document.getElementById(`play-btn-${id}`);
+            if (audio.paused) {
+                audio.play();
+                btn.innerHTML = pauseIcon;
+                triggerTTSHint(id);
+            } else {
+                audio.pause();
+                btn.innerHTML = playIcon;
+            }
+        }
 
-        // Autoplay Logic
-        let autoplayEnabled = localStorage.getItem('autoplay') === 'true';
+        function triggerTTSHint(id) {
+            const hintKey = 'tts_hint_shown';
+            if (localStorage.getItem(hintKey)) return;
+
+            const ttsBtn = document.getElementById(`tts-btn-${id}`);
+            const infoText = document.getElementById(`info-text-${id}`);
+
+            if (!ttsBtn || !infoText) return;
+
+            setTimeout(() => {
+                ttsBtn.classList.add('pulse-gold');
+                setTimeout(() => {
+                    infoText.classList.add('visible');
+                    setTimeout(() => {
+                        infoText.classList.remove('visible');
+                        ttsBtn.classList.add('pulse-gold');
+                        setTimeout(() => {
+                            ttsBtn.classList.remove('pulse-gold');
+                        }, 3000);
+                    }, 4000);
+                }, 1000);
+            }, 500);
+
+            localStorage.setItem(hintKey, 'true');
+        }
         const autoplayToggle = document.getElementById('autoplay-toggle');
         if (autoplayToggle) {
             autoplayToggle.checked = autoplayEnabled;
