--- a/core/data/meta/podcast/kompendium_podcast_template.html
+++ b/core/data/meta/podcast/kompendium_podcast_template.html
@@ -687,6 +687,7 @@
 
             if (audio.paused) {
                 audio.play();
+                triggerTTSHint();
                 btn.innerHTML = pauseIcon;
             } else {
                 audio.pause();
@@ -703,6 +704,33 @@
             initPlayer(5);
             initPlayer(6);
         });
+    
+        function triggerTTSHint(id) {
+            const hintKey = 'tts_hint_shown';
+            if (localStorage.getItem(hintKey)) return;
+
+            const ttsBtn = id ? document.getElementById(`tts-btn-${id}`) : document.getElementById('tts-btn');
+            const infoText = id ? document.getElementById(`info-text-${id}`) : document.getElementById('info-text');
+            
+            if (!ttsBtn || !infoText) return;
+
+            setTimeout(() => {
+                ttsBtn.classList.add('pulse-gold');
+                setTimeout(() => {
+                    infoText.classList.add('visible');
+                    setTimeout(() => {
+                        infoText.classList.remove('visible');
+                        ttsBtn.classList.add('pulse-gold');
+                        setTimeout(() => {
+                            ttsBtn.classList.remove('pulse-gold');
+                        }, 3000);
+                    }, 4000);
+                }, 1000);
+            }, 500);
+
+            localStorage.setItem(hintKey, 'true');
+        }
+
     </script>
 </body>
 
